--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -19,9 +19,7 @@
     font-size: 3px;
 }
 
-.cube_holder{
-    display: flex;
-}
+
 
 .button{
     width: 100%;
